add stack constructor tests

--- a/Tests/Makefile
+++ b/Tests/Makefile
@@ -7,12 +7,13 @@ OBJ = $(C_FILES:%.cpp=%.o)
 O_FILES = $(addprefix $(OBJDIR)/, $(OBJ))
 
 INCLUDE = -I./../src/vector -I./../src/Iterator -I./VectorTest -I./utils -I../src/utils/ \
-	-I./ReverseIteratorTest -I../src/stack
+	-I./ReverseIteratorTest -I../src/stack -I./StackTest
 		
-C_FILES = test.cpp VectorTest.cpp ReverseIteratorTest.cpp
+C_FILES = test.cpp VectorTest.cpp ReverseIteratorTest.cpp StackTest.cpp
 SRC_PATHS = ./ \
 			./VectorTest \
-			./ReverseIteratorTest 
+			./ReverseIteratorTest  \
+			./StackTest 
 
 			
 
