--- a/Tests/Makefile
+++ b/Tests/Makefile
@@ -9,7 +9,8 @@ O_FILES = $(addprefix $(OBJDIR)/, $(OBJ))
 INCLUDE = -I./../src/vector -I./../src/Iterator -I./VectorTest -I./utils -I../src/utils/ \
 	-I./ReverseIteratorTest -I../src/stack -I./StackTest -I../src/map
 		
-C_FILES = test.cpp VectorTest.cpp ReverseIteratorTest.cpp StackTest.cpp
+# C_FILES = test.cpp VectorTest.cpp ReverseIteratorTest.cpp StackTest.cpp
+C_FILES = test.cpp
 SRC_PATHS = ./ \
 			./VectorTest \
 			./ReverseIteratorTest  \
