add initial map test struct

--- a/Tests/Makefile
+++ b/Tests/Makefile
@@ -7,14 +7,15 @@ OBJ = $(C_FILES:%.cpp=%.o)
 O_FILES = $(addprefix $(OBJDIR)/, $(OBJ))
 
 INCLUDE = -I./../src/vector -I./../src/Iterator -I./VectorTest -I./utils -I../src/utils/ \
-	-I./ReverseIteratorTest -I../src/stack -I./StackTest -I../src/map
+	-I./ReverseIteratorTest -I../src/stack -I./StackTest -I../src/map -I./MapTest
 		
-# C_FILES = test.cpp VectorTest.cpp ReverseIteratorTest.cpp StackTest.cpp
-C_FILES = test.cpp
+# C_FILES = test.cpp VectorTest.cpp ReverseIteratorTest.cpp StackTest.cpp MapTest.cpp
+C_FILES = test.cpp MapTest.cpp
 SRC_PATHS = ./ \
 			./VectorTest \
 			./ReverseIteratorTest  \
-			./StackTest 
+			./StackTest \
+			./MapTest
 
 			
 
